--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.8",
+    "@angular/material": "^16.2.10",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "katex": "^0.16.9",
     "ngx-quill": "^23.0.0",
     "quill": "^1.3.7",
     "rxjs": "~7.8.0",
